# cppotify

./: .gitmodules  CMakeLists.txt
src/: main.cpp  spotify.cpp  spotify.h  tui.cpp  tui.h
